hphp/hack/test/typecheck/override/override_final7.php.exp
File "override_final7.php", line 26, characters 24-25:
Some members in class `C1` are incompatible with those declared in type `P2` (Typing[4070])
  File "override_final7.php", line 21, characters 25-37:
  You cannot override this method
  File "override_final7.php", line 13, characters 25-37:
  It was declared as final
